# predicttok

./: .gitignore  index.html  pyproject.toml  run_server.sh
assets/: index-BjHLs9-F.js  index-CBmRs5lq.css  index-gH1JqCAJ.js
scripts/: check_drift_and_retrain.py  convert_kaggle_to_engine.py  generate_sample_data.py  hashtag_impact_cli.py  predict_cli.py  train_model.py
tiktok-web/: .cursorrules  package-lock.json  package.json
tiktok-web/client/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
tiktok-web/client/src/: App.jsx  index.css
tiktok-web/client/src/components/: Layout.jsx  UI.jsx
tiktok-web/client/src/hooks/: useApi.js
tiktok-web/client/src/lib/: api.js
tiktok-web/client/src/pages/: Dashboard.jsx  HashtagAnalyzer.jsx  Home.jsx  Metrics.jsx  Predict.jsx
tiktok-web/server/: index.js  package-lock.json  package.json
tiktok-web/server/routes/: dashboard.js  hashtags.js  metrics.js  predict.js
tiktok_engine/: __init__.py  config.py  data.py  drift.py  features.py  impact.py  modeling.py
web/: __init__.py  main.py
web/templates/: index.html
